minor tweaks and typo fixes

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -39,7 +39,7 @@ Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion 
 
 As with many complex diseases, such as gout, \gls{t2d}, obesity, kidney disease, and metabolic syndrome, there is an environmental component and a genetic component. Genetic variation at a single locus, or at many, influences the genetic risk of an individual for developing disease. Genetic variation refers to the differences in DNA sequence that occur between individuals of a species. Types of genetic variation include, \gls{snp} which are single base changes (or polymorphisms), and \glspl{indel}. \Glspl{indel} are either additional DNA, or DNA that had been lost, and can be short (a single base, up to approximately 100 base pairs) or long (kilobases to megabases) at which point that can also become structural variants. Other types of genetic variation include copy number variation (alterations in the number of copies of a gene from what would be expected from the ploidy of the organism), and re-arrangements such as translocations - segments of DNA moving to different chromosomes, or inversions - segments of DNA that are excised, inverted, and reinserted at the same location on the chromosome. Within population based genetic studies, such as case-control association studies, the prominent type of genetic variation that is studied are \glspl{snp}. 
 
-Common methodologies of genotyping, to determine the genetic variation of an individual, are \gls{snp} arrays  or sequencing. \Gls{snp} arrays, such as the Illumina Human CoreExome beadchip contain probes designed for specific genetic variants that bind DNA samples, and after a single base extension step with a labelled nucleotide, enable a genotype to be determined from a fluorence sensitive scanner [@Wang1998;@Gunderson2005; Shen2005]. Sequencing technologies, such as the short read sequencing performed by the next-generation sequencers, take DNA and randomly fragment it, then determine the bases sequentially in the fragment to approximately 150 bp from the start to create a 'read' [@Metzker2010]. The reads are then aligned to a reference genome and at each base of the genome a genotype is called by using the distribution of bases from reads overlapping that position [@Li2008; @mckenna2010genome]. One of the key differences between \gls{snp} arrays and sequencing is that \gls{snp} arrays capture known variation, whereas sequencing allows for unknown genetic variants to be genotyped.
+Common methodologies of genotyping, to determine the genetic variation of an individual, are \gls{snp} arrays  or sequencing. \Gls{snp} arrays, such as the Illumina Human CoreExome beadchip contain probes designed for specific genetic variants that bind DNA samples, and after a single base extension step with a labelled nucleotide, enable a genotype to be determined from a fluorence sensitive scanner [@Wang1998;@Gunderson2005; @Shen2005]. Sequencing technologies, such as the short read sequencing performed by the next-generation sequencers, take DNA and randomly fragment it, then determine the bases sequentially in the fragment to approximately 150 bp from the start to create a 'read' [@Metzker2010]. The reads are then aligned to a reference genome and at each base of the genome a genotype is called by using the distribution of bases from reads overlapping that position [@Li2008; @mckenna2010genome]. One of the key differences between \gls{snp} arrays and sequencing is that \gls{snp} arrays capture known variation, whereas sequencing allows for unknown genetic variants to be genotyped.
 
 ## Natural selection
 
@@ -65,8 +65,7 @@ Directional selection operates in two fashions, positive or negative. Positive s
 
 The way selection can affect allele frequencies can be thought of as a sweep: as an allele is selected it “sweeps” through the population. The intensity of this sweep can be classified as, hard, soft, and partial or incomplete. A hard sweep, also known as a classical sweep, is when a beneficial allele rapidly rises in frequency and through hitch-hiking the neutral variation is simultaneously reduced at linked sites, as shown in Figure \@ref(fig:sweepDiagram) [@Hermisson2005;@Hermisson2017; @Nielsen2005; @Smith1974].
 
-(ref:sweepDiagram) Representation of alleles before and after a hard sweep. 
-New mutation is shown in red. Neutral alleles are shown in black.
+(ref:sweepDiagram) Representation of alleles before and after a hard sweep.  Each rectangle represents a haplotype within a population. A new mutation is shown in red and neutral alleles are shown in black. After a hard sweep the new mutation becomes fixed in the population, along with the neutal allele that is linked to it.
 
 
 ```{r sweepDiagram, echo = FALSE, fig.cap='(ref:sweepDiagram)', fig.width=3, fig.asp=1, out.width='50%', fig.align='center'}
