--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -2047,7 +2047,7 @@ _Zeng's E_
 For the \gls{ton} population there were `r lower_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select(contains('chrom')) %>% distinct() %>% NROW()` windows that met the lower tail threshold for significance and made `r lower_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select(contains('chrom')) %>% distinct() %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce() %>% length()` independent continuous regions covering `r lower_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select(contains('chrom')) %>% distinct() %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce() %>% GenomicRanges::width() %>% sum()/1e6` Mbp. In these regions there were `r lower_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select('SYMBOL') %>% distinct() %>% NROW()` genes, of which `r lower_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% anti_join(., bind_rows(lower_sig_stats, upper_sig_stats) %>% filter(statname == 'Zeng.E', !pop %in% c('TON')), by = "SYMBOL") %>% select(SYMBOL) %>% distinct() %>% NROW()` were only significant in \gls{ton} for \gls{ze}. In the upper tail there were `r upper_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select(contains('chrom')) %>% distinct() %>% NROW()` windows that met the significance threshold. These windows made `r upper_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select(contains('chrom')) %>% distinct() %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce() %>% length()` independent continuous regions with a total of `r upper_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select(contains('chrom')) %>% distinct() %>% GenomicRanges::GRanges() %>% GenomicRanges::reduce() %>% GenomicRanges::width() %>% sum()/1e6` Mbp containing `r upper_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% select('SYMBOL') %>% distinct() %>% NROW()` genes, with `r upper_sig_stats %>% filter(statname == 'Zeng.E', pop %in% c('TON')) %>% anti_join(., bind_rows(lower_sig_stats, upper_sig_stats) %>% filter(statname == 'Zeng.E', !pop %in% c('TON')), by = "SYMBOL") %>% select(SYMBOL) %>% distinct() %>% NROW()` genes only meeting significance in \gls{ton} for \gls{ze}.
 ```
 
-\FloatBarrier
+<!-- \FloatBarrier -->
 
 ### Selection in disease-associated genes
 
@@ -2065,7 +2065,7 @@ Figure \@ref(fig:intraSelGenes) shows the genes associated with urate, gout and 
 
 (ref:intraSelGenes) Genes associated with urate, gout, obesity, \gls{t2d}, kidney disease, and metabolic syndrome having both significance in intra-population \gls{sfs} and haplotypic based methods in at least one Polynesian population. Numbers inside boxes indicate the number of significant windows (\gls{sfs} methods) or \glspl{snp} (haplotypic methods) for the population. 
 
-```{r intraSelGenes, fig.cap = '(ref:intraSelGenes)', fig.width=7.5}
+```{r intraSelGenes, fig.cap = '(ref:intraSelGenes)', fig.width=7}
 # genes that have at least one poly population with significance in both haplotypic and sfs stats
 rbind(
 bind_rows(cim_obesity_sig, cim_urate_sig, cim_t2d_sig, cim_metsyn_sig, cim_kd_sig) %>% mutate(pop = 'CIM') %>% distinct(),
@@ -3189,16 +3189,18 @@ As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the 
 
 <!-- LEPR - ihs rs12042877 in TON. only other populations were AFR and EAS -->
 
-### Selection in Malaria associated loci in Polynesian populations
+### Selection in malaria associated loci in Polynesian populations
 
 
-Malaria is endemic in the southwest pacific, extending out to the east as far as Vanuatu, but is absent further west in Polynesia [@Clark1993]. There is evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania, through which the Polynesian ancestors would have passed through prior to settlement of the Pacfic [@Clark1993;]. In Remote Oceania, where malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies [@Cappellini2008;@Flint1986].
+Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, but is absent and awlays had been absent, further west in Polynesia [@Clark1993]. There is evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania, through which the Polynesian ancestors would have passed through prior to settlement of the Pacfic [@Clark1993;]. In Polynesia, where malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though genrally in island groups where malaria remains extant [@Cappellini2008;@Flint1986].
 
 Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
 
-The blood antigen ABO has a higher susceptibility to malaria in the A, B, or AB antigen groups, than O [@Zerihun2011]. This has led to the formulation of a potential mechanism of cytoadherence through infected red blood cells expressing PfEMP-1 and binding to the A or B antigens on other red blood cells, enabling further infection [@Cserti2015]. There is an increasing gradiant of A-type antigen from west to east in the Pacific, with populations in Melanesia having some of the lowest frequencies and within Polynesia, Western Polynesian populations have lower frequencies than Eastern Polynesian populations [@Simmons1962]. This could suggest that areas with endemic malaria have a maintained selective pressure against the A-type antigen.
+The blood antigen ABO has a higher susceptibility to malaria in the A, B, or AB antigen groups, than O [@Zerihun2011]. This has led to the formulation of a potential mechanism of cytoadherence through infected red blood cells expressing PfEMP-1 and binding to the A or B antigens on other red blood cells, enabling further infection [@Cserti2015]. There is an increasing gradiant of A-type antigen from west to east in the Pacific, with populations in Melanesia having some of the lowest frequencies, whereas, within Polynesia, Western Polynesian populations have lower frequencies than Eastern Polynesian populations [@Simmons1962]. This could suggest that areas with endemic malaria have a maintained selective pressure against the A-type antigen.
 
-_ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \Gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele displaying a possible signal of selection.
+_ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. 
+
+_DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \Gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele displaying a possible signal of selection.
 
 
 From the obesity \gls{gwas} associated gene list, there was _ADCY9_, which had a very strong signal for \gls{ihs} for 7 markers in \gls{cim} and 2 markers in \gls{nzm}, that were the only populations with significant \gls{ihs} values. The variant rs10775349 in _ADCY9_ had been associated with malaria in a candidate gene approach but not in \gls{gwas} [@Maiga2013].
@@ -3209,7 +3211,7 @@ From the obesity \gls{gwas} associated gene list, there was _ADCY9_, which had a
 
 ### Study limitations {#chap3limit}
 
-There were some technical limitations of the study that influenced the results obtained. The use of a \gls{snp} array meant that there was an ascertainment bias built into the markers observed [@nielsen2007recent]. The data regarding the statistic distributions can be found in chapter 4 (sections \@ref(tdDist), \@ref(fwhDist), \@ref(flfDist), and \@ref(zeDist). The quality control process for the CoreExome \gls{snp} array also has a bias against singletons and low minor allele frequency \glspl{snp} [@Guo2014]. The effect of this was seen in the right shifting of the distributions of the intra-population frequency based statistics of \gls{td}, \gls{flf}, and \gls{ze}, all of which make use of low frequency or singleton variants in their calculations (Tables \@ref(tab:superGlobalSummaryTD), \@ref(tab:superGlobalSummaryFWH), \@ref(tab:superGlobalSummaryFLF), and \@ref(tab:superGlobalSummaryZE)). This shift was not observed in \gls{fwh} which compared the ratio of high frequency derived and ancestral allele variants with the intermediate frequency variants. The shift was seen in \gls{td}, however with the African populations being shifted to the right, such that the first percentile for many was above zero. The intermediate and high frequency variants were over represented compared to the actual situation which will also have had an impact on the haplotypic statistics due to haplotypes that have low-frequency variants being altered. Further discussion on the distributions can be found in chapter 4, section \@ref(chap4limit). The effect of using \gls{snp} array data and not sequence data, differing markers, marker density, and differing window sizes all contributed to the up-to 65% replication of previously identified regions (section \@ref{priorPubs}). For the frequency based statistics there was also only a \gls{fdr} less than 10% in the Polynesian populations for the 1^st^ percentile of \gls{td} and \gls{fwh}. By focussing on regions that had multiple windows or multiple statistics the chance of it being a false positive should be reduced.
+There were some technical limitations of the study that influenced the results obtained. The use of a \gls{snp} array meant that there was an ascertainment bias built into the markers observed [@nielsen2007recent]. The data regarding the statistic distributions can be found in chapter 4 (sections \@ref(tdDist), \@ref(fwhDist), \@ref(flfDist), and \@ref(zeDist). The quality control process for the CoreExome \gls{snp} array also has a bias against singletons and low minor allele frequency \glspl{snp} [@Guo2014]. The effect of this was seen in the right shifting of the distributions of the intra-population frequency based statistics of \gls{td}, \gls{flf}, and \gls{ze}, all of which make use of low frequency or singleton variants in their calculations (Tables \@ref(tab:superGlobalSummaryTD), \@ref(tab:superGlobalSummaryFWH), \@ref(tab:superGlobalSummaryFLF), and \@ref(tab:superGlobalSummaryZE)). This shift was not observed in \gls{fwh} which compared the ratio of high frequency derived and ancestral allele variants with the intermediate frequency variants. The shift was seen in \gls{td}, however with the African populations being shifted to the right, such that the first percentile for many was above zero. The intermediate and high frequency variants were over represented compared to the actual situation which will also have had an impact on the haplotypic statistics due to haplotypes that have low-frequency variants being altered. Further discussion on the distributions can be found in chapter 4, section \@ref(chap4limit). The effect of using \gls{snp} array data and not sequence data, differing markers, marker density, and differing window sizes all contributed to the up-to 65% replication of previously identified regions (section \@ref(priorPubs). For the frequency based statistics there was also only a \gls{fdr} less than 10% in the Polynesian populations for the 1^st^ percentile of \gls{td} and \gls{fwh}. By focussing on regions that had multiple windows or multiple statistics the chance of it being a false positive should be reduced.
 
 Another technical limitation that affected the haplotypes was phasing. The phasing of the haplotypes for the Polynesian populations made use of the 1000 Genomes Project reference haplotype panel for probabilistic phasing and could not make use of trios. This panel does not contain Polynesian-specific haplotypes and so the phasing would be influenced by this. While the majority of common haplotypes will be represented in this panel, haplotypes that are Polynesian-specific are not, and this introduces incorrect haplotypes. The phasing uncertainty was unable to be taken into account for any of the methods, this will influence the haplotypic methods of selection. 
 
