--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -226,7 +226,7 @@ Prior to performing the \gls{gwas} analyses using the different classifications 
 
 #### Performance of gout classification criteria
 
-There were a total of `r ukbb_n$n_gout` individuals that had any classification of gout and `r ukbb_n$n_controls` controls. Of those with any classification of gout, there were `r ukbb_n$n_hosp` with a hospital diagnosis, `r ukbb_n$n_ult` with urate lowering therapy, `r ukbb_n$n_winnard` with the Winnard criteria, and `r ukbb_n$n_self` with self-reported gout. The overlaps in classification between each group can be seen in Figure \@ref(fig:ukbbupsetplot). There was considerable overlap between the self-report, urate lowering therapy, and Winnard classifications with 1242 individuals meeting all three classifications. There were 571 (27.6%) of 2066 participants who could only be defined through self-report. And for hospital diagnosis, 126 (33.0%) of 382, did not meet the self-report of gout, or \gls{ult} use definition criteria.
+There were a total of `r ukbb_n$n_gout` individuals that had any classification of gout and `r formatC(ukbb_n$n_controls, big.mark=',', big.interval = 3, format = 'f', digits = 0)` controls. Of those with any classification of gout, there were `r ukbb_n$n_hosp` with a hospital diagnosis, `r ukbb_n$n_ult` with urate lowering therapy, `r ukbb_n$n_winnard` with the Winnard criteria, and `r ukbb_n$n_self` with self-reported gout. The overlaps in classification between each group can be seen in Figure \@ref(fig:ukbbupsetplot). There was considerable overlap between the self-report, urate lowering therapy, and Winnard classifications with 1242 individuals meeting all three classifications. There were 571 (27.6%) of 2066 participants who could only be defined through self-report. And for hospital diagnosis, 126 (33.0%) of 382, did not meet the self-report of gout, or \gls{ult} use definition criteria.
 
 The prevalence of gout from all definitions was `r round(ukbb_n$n_gout/ukbb_n$n_control *100,1)`%. This ranged from the lowest prevalence of gout of 0.36%, from the hospital diagnosis definition, through to the highest of 2.18%, by self-report of gout or \gls{ult} usage in the study population (Table \@ref(tab:ukbbprev)). The UK Biobank replication cohort had a total of `r rep_fam %>% filter(X6 == 2) %>% tally()` cases and `r rep_fam %>% filter(X6 ==1) %>% tally() %>% pull(n) %>% formatC(., big.mark = ',', format = 'f', digits = 0)` controls.
 
@@ -237,7 +237,7 @@ summarise_ukbb <- function(x){
 
 #ukbbgout_rep %>% group_by(AFF) %>% summarise_ukbb()
 
-ukbio_gout %>% summarise_ukbb() %>% left_join(., ukbbgout_rep %>% mutate(cc = forcats::as_factor(case_when(AFF == 1~ "control", AFF == 2 ~ "case")) %>% forcats::lvls_reorder(., c(2,1))) %>%  group_by(cc) %>% summarise_ukbb(), by = 'var', suffix = c("_interim", "_rep"))  %>% kable(., booktabs = TRUE, caption = "(\\#tab:ukbbclin) Clinical details of participants in the UK Biobank.", format = "latex", escape = FALSE, col.names = c("", rep(c("Case", "Control"),2)))  %>% kable_styling(latex_options = c('hold_position')) %>% add_header_above(., c("", "", "", "Replication" = 2)) %>%  group_rows(., "Gout medication", 5, 8) %>% group_rows(., "Gout classification", 9, 12) %>% footnote(general = "Mean age is reported in years. BMI is reported in kg/m\\\\textsuperscript{2}", escape = FALSE, general_title = "")
+ukbio_gout %>% summarise_ukbb() %>% left_join(., ukbbgout_rep %>% mutate(cc = forcats::as_factor(case_when(AFF == 1~ "control", AFF == 2 ~ "case")) %>% forcats::lvls_reorder(., c(2,1))) %>%  group_by(cc) %>% summarise_ukbb(), by = 'var', suffix = c("_interim", "_rep"))  %>% kable(., booktabs = TRUE, caption = "(\\#tab:ukbbclin) Clinical details of participants in the UK Biobank.", format = "latex", escape = FALSE, col.names = c("", rep(c("Case", "Control"),2)))  %>% kable_styling(latex_options = c('hold_position')) %>% add_header_above(., c("", "", "", "Replication" = 2)) %>%  group_rows(., "Gout medication", 5, 8) %>% group_rows(., "Gout classification", 9, 12) %>% footnote(general = "Mean age is reported in years. BMI is reported in kg/m\\\\textsuperscript{2}", escape = FALSE, general_title = "", threeparttable = TRUE)
 ```
 
 (ref:ukbbupsetplot) An "upset plot" showing the number of samples (left) and intersections (upper) for the different classification criteria.
@@ -861,7 +861,7 @@ polyhaplogwas %>%
 
 
 
-The UK Biobank had a larger number of cases for the gout \gls{gwas} than @Kottgen2013. This increase in cases reflects the increase in strength of association that was seen. A similar comparison of gout definitions was performed using data from the study for updated gout and classification criteria (SUGAR) with 983 rheumatology patients with known gout affection and definitions derived from epidemiology studies used in the Global Urate Genetics Consortium \gls{gwas} of hyperuricaemia and gout were tested for sensitivity and specificity [@Dalbeth2016]. In the SUGAR paper, the definition that provided the highest specificity (82%) and sensitivity (72%) was self-reported gout or on \gls{ult} when tested against the mono-sodium urate crystal identification as the gold standard. Consistent with this, the work presented here found that the self-report of gout or \gls{ult} use definition also provided the highest precision from the definitions used, and supports the use of this definitionin genetic studies  when better gout classification methods are not available, such as \gls{acr} criteria or mono-sodium urate crystal identification.
+The UK Biobank had a larger number of cases for the gout \gls{gwas} than @Kottgen2013. This increase in cases reflects the increase in strength of association that was seen. A similar comparison of gout definitions was performed using data from the study for updated gout and classification criteria (SUGAR) with 983 rheumatology patients with known gout affection and definitions derived from epidemiology studies used in the Global Urate Genetics Consortium \gls{gwas} of hyperuricaemia and gout were tested for sensitivity and specificity [@Dalbeth2016]. In the SUGAR paper, the definition that provided the highest specificity (82%) and sensitivity (72%) was self-reported gout or on \gls{ult} when tested against the mono-sodium urate crystal identification as the gold standard. Consistent with this, the work presented here found that the self-report of gout or \gls{ult} use definition also provided the highest precision from the definitions used, and supports the use of this definition in genetic studies  when better gout classification methods are not available, such as \gls{acr} criteria or mono-sodium urate crystal identification.
 
 The different definitions of gout used in this study may represent the different disease presentations or patient populations. Not all patients were captured by all criteria, and the Winnard definition was not as good as self-report of gout or \gls{ult}, despite a similarity in definitions, and also had lower precision in the genetic association. The hospital diagnosis definition had the lowest prevalence and was restrictive, making it the least likely to capture most people with gout. One third of the people that met this definition did not meet any of the self-report definitions, for gout, and/or \gls{ult} usage. There are a number of reasons that might explain this. Firstly the hospitalised population may have a different disease presentation from those in the community identified by self-report or \gls{ult} use. Secondly, a diagnosis of gout made in a hospital may subsequently be revised to a different diagnosis; this is not taken into account with the current methodology. Therefore, when self report information is available it is recommended that the self-report of gout or \gls{ult} use be used as the way to define cases.
 
